--- a/src/components/pages/HomePage/BackgroundImage/BackgroundImage.css
+++ b/src/components/pages/HomePage/BackgroundImage/BackgroundImage.css
@@ -1,4 +1,8 @@
 .BackgroundImage {
-    height: auto;
-    width :auto;
+    height:100vh;
+    width :100% ;
+    background-image: url('./background_img.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
