--- a/src/components/pages/HomePage/NavBar/NavBar.css
+++ b/src/components/pages/HomePage/NavBar/NavBar.css
@@ -5,4 +5,14 @@
   .title {
     flex-grow: 1;
   }
+.logo{
+  background-image: url(./aicte_logo.png);
+  
+  height: 100px;
+  width: 400px;
+  margin-right: 0;
+  background-size:auto;
+  background-repeat: no-repeat;
+  background-position: center;
+}
   
