--- a/src/components/pages/HomePage/NavBar/NavBar.css
+++ b/src/components/pages/HomePage/NavBar/NavBar.css
@@ -10,7 +10,7 @@
   .logo {
     height: 100px;
     width: 500px;
-    background-image: url('./aicte_logo.png');
+    background-image: url(../../../../assets/images/aicte_logo.png);
     background-repeat: no-repeat;
     margin-top: 20px;
   }
