--- a/src/components/pages/AuthPage/SignupPage/SignupPage.css
+++ b/src/components/pages/AuthPage/SignupPage/SignupPage.css
@@ -20,4 +20,6 @@
     justify-content: center;
     align-items: center;
      height: 100vh; /* 100% of the viewport height */
+    top: 100px;
+    right: 100px;
     } 
