--- a/src/components/pages/HomePage/BackgroundImage/BackgroundImage.css
+++ b/src/components/pages/HomePage/BackgroundImage/BackgroundImage.css
@@ -1,7 +1,7 @@
 .BackgroundImage {
     height:100vh;
     width :100% ;
-    background-image: url('./background_img.jpg');
+    background-image: url(../../../../assets/images/background_img.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
