HomePage Background color changed

--- a/src/components/pages/HomePage/HomePage.css
+++ b/src/components/pages/HomePage/HomePage.css
@@ -1,6 +1,6 @@
 .HomePage {
     font-size: large;
-    background-color: aqua;
+    background-color: white;
 }
 .NavBar{
     background-color: white;
