--- a/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/MidNavbar.css
+++ b/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/MidNavbar.css
@@ -1,9 +1,13 @@
 .mid-navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content:flex-start;
     align-items: center;
-    background-color: #333;
+    background-color: #d6d6d6;
     padding: 10px;
+    margin-top: 64px;
+    height: 15px ;
+    position: fixed;
+    width: 100%;
   }
   
   .mid-navbar > * {
