--- a/src/components/pages/CurriculumDesigner/Navbar/UpperNavbar/UpperNavbar.css
+++ b/src/components/pages/CurriculumDesigner/Navbar/UpperNavbar/UpperNavbar.css
@@ -38,15 +38,19 @@
     width: 50px;
     height: 50px;
     margin-right: 150px;
+
   }
   
+  
   .upperNavbar-right {
+    width: 100%;
     flex: 0.0005;
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
     padding: 0px;
-    gap: 0.1px; /* Spacing between icons */
+    gap: 0.1px; /* Spacing between icons */ 
+
   }
   
   .upperNavbar-right .MuiListItem-button {
