--- a/src/components/pages/MeetingPage/MeetingPage.css
+++ b/src/components/pages/MeetingPage/MeetingPage.css
@@ -23,14 +23,17 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /* Style the paper container for the meeting content */
 .paper-container {
   padding: 20px;
+  height: 100vh;
+  width: 100vh;
   background-color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
 
 /* Style the video container */
@@ -38,6 +41,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  height: 70vh;
+  width: 90vh;
+  
 }
 
 .video-container video {
