--- a/src/components/pages/CurriculumDesigner/CanvasArea/CanvasArea.css
+++ b/src/components/pages/CurriculumDesigner/CanvasArea/CanvasArea.css
@@ -7,7 +7,8 @@
   
   canvas {
     border: 2px solid #333;
-    margin: 20px;
+    margin: none;
+    margin-top: 100px;
     cursor: pointer;
   }
   
