--- a/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/File/File.css
+++ b/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/File/File.css
@@ -2,3 +2,13 @@ file-options{
     display: flex;
 
 }
+.file-button{
+    font-size: 16px;
+    padding: 10px 20px;
+    margin: 10px;
+    background-color: #0074d9;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
