--- a/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/MidNavbar.css
+++ b/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/MidNavbar.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content:flex-start;
     align-items: center;
+    margin-top: auto;
     background-color: #d6d6d6;
     padding: 10px;
     margin-top: 64px;
@@ -11,6 +12,7 @@
   }
   
   .mid-navbar > * {
+    margin-top: 40px;
     margin-right: 10px;
     color: white;
     text-decoration: none;
