Designed the file section css in UserCurriculum page

--- a/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/File/File.css
+++ b/src/components/pages/CurriculumDesigner/Navbar/MidNavbar/File/File.css
@@ -1,14 +1,56 @@
-file-options{
-    display: flex;
+.file-wrap {
+    position: relative;
 
-}
-.file-button{
-    font-size: 16px;
-    padding: 10px 20px;
-    margin: 10px;
-    background-color: #0074d9;
-    color: black;
+  }
+  
+  .file-button {
+    background: #4CAF50;
+    color: white;
+    padding: 14px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+    transition: background-color 0.3s;
+  }
+  
+  .file-button:hover {
+    background-color: #45a049;
+  }
+  
+  .file-options {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 250px;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+  }
+  
+  .file-options > div {
+    padding: 10px 20px;
+    border-bottom: 1px solid #f1f1f1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: background-color 0.2s;
+  }
+  
+  .file-options > div:last-child {
+    border-bottom: none;
+  }
+  
+  .file-options > div:hover {
+    background-color: #f2f2f2;
+  }
+  
+  .file-options > div > svg {
+    margin-right: 10px;
+  }
+  
+  
